--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ body, html {
     background-color: transparent;
     border: none;
     cursor: pointer;
+    padding: 10%;
 }
 
 /* INSTRUCTIONS */
