--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,8 @@ body, html {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    padding: 10%;
+    padding: 0;
+    margin: 0;
 }
 
 /* INSTRUCTIONS */
