--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body, html {
     width: 60vw;           
     position: fixed;
     top: 50%;              
-    left: 47%;             
+    left: (15vw + 20px);             
     transform: translate(-50%, -50%); 
     z-index: 1;
     border: 2px solid #000; 
@@ -52,7 +52,7 @@ body, html {
     overflow: scroll;
     top: 10px;
     left: 10px;
-    width: 19vw;
+    width: 15vw;
     height: 47vh;
     background: white;
     padding: 10px;
@@ -119,8 +119,8 @@ button {
 .gallery {
     display: grid;
     overflow: scroll;
-    width: 21vw;
-    grid-template-columns: repeat(3, 7vw); 
+    width: 18vw;
+    grid-template-columns: repeat(3, 6vw); 
     gap: 10px; 
     position: absolute;
     top: 10px;
