--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ button {
     overflow: scroll;
     top: 50vh;
     left: 10px;
-    width: 270px;
+    width: 15vw;
     height: 50vh;
     background: white;
     padding: 10px;
